Fixed .pass-options border-radius problem.  No longer clipping edges.

--- a/public/styles.css
+++ b/public/styles.css
@@ -93,6 +93,8 @@ body {
     height: 100%;
     width: 80px;
     border-left: 1px solid #c1c1c1;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     background-color: #f0f0f0;
 }
 
